--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,4 @@ add_subdirectory(tests)
 
 #add_executable(main main.cpp) 
 
-#target_link_libraries(main TimeLib)
+#target_link_libraries(main BitArrayLib)
